--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,11 +1,11 @@
 phases:
   build:
     commands:
-      - echo Build started on `date`
+      - echo Build started on 'date'
       - mvn install
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed on 'date'
       - mvn package
 artifacts:
   files:
