--- a/.ebextensions/fix-path.config
+++ b/.ebextensions/fix-path.config
@@ -1,3 +1,3 @@
 container_commands:
   fix_path:
-    command: "JenkinsWar.war 2>&1 > /var/log/my_last_deploy.log"
+    command: "unzip JenkinsWar.war 2>&1 > /var/log/my_last_deploy.log"
