--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,5 @@ phases:
       - mvn package
 artifacts:
   files:
-    - '**/*.war'
-    - .ebextensions/**/*
+  - JenkinsWar/**/*
+  - MyAppBuild/**/*
